WeatherDataAPI - Add response to request for a specific station and all data.

--- a/WeatherDataAPI/templates/home.html
+++ b/WeatherDataAPI/templates/home.html
@@ -6,8 +6,10 @@
 </head>
 <body>
     <h1>Weather Data API</h1>
-    <p>URL format: http://127.0.0.1:5001/api/v1/station/date</p>
+    <p>URL format for a specific station and a specific date: http://127.0.0.1:5001/api/v1/station/date</p>
     <p>URL example: http://127.0.0.1:5001/api/v1/10/1988-10-25</p>
+    <p>URL format for a specific station and all records: http://127.0.0.1:5001/api/v1/station</p>
+    <p>URL example: http://127.0.0.1:5001/api/v1/10</p>
     <p>{{data|safe}}</p>
 </body>
 </html>
