WeatherDataAPI - Add response to request for a specific station, a specific year and all data.

--- a/WeatherDataAPI/templates/home.html
+++ b/WeatherDataAPI/templates/home.html
@@ -10,6 +10,8 @@
     <p>URL example: http://127.0.0.1:5001/api/v1/10/1988-10-25</p>
     <p>URL format for a specific station and all records: http://127.0.0.1:5001/api/v1/station</p>
     <p>URL example: http://127.0.0.1:5001/api/v1/10</p>
+    <p>URL format for a specific station, specific year and all records: http://127.0.0.1:5001/api/v1/yearly/station/year</p>
+    <p>URL example: http://127.0.0.1:5001/api/v1/yearly/10/1999</p>
     <p>{{data|safe}}</p>
 </body>
 </html>
