--- a/RestaurantManagementApp/restaurant_management/templates/index.html
+++ b/RestaurantManagementApp/restaurant_management/templates/index.html
@@ -6,7 +6,19 @@
 </head>
 <body>
     <h1>Restaurant Menu</h1>
-    <h3>{{ meals }}</h3>
-    <h3>{{ ingredients }}</h3>
+    {% for meal in meals %}
+        <h2>{{ meal.1 }}</h2>
+        {% for row in mealitem_list %}
+            {% if row.meal_type == meal.0 %}
+                {% if row.status == 0 %}
+                    <h3><del>{{row.meal}}</del></h3>
+                {% else %}
+                    <h3>{{row.meal}}</h3>
+                {% endif %}
+                <p>{{row.description}}</p>
+                <p>{{row.price}}</p>
+            {% endif %}
+        {% endfor %}
+    {% endfor %}
 </body>
 </html>
