--- a/RestaurantManagementApp/restaurant_management/templates/index.html
+++ b/RestaurantManagementApp/restaurant_management/templates/index.html
@@ -11,9 +11,9 @@
         {% for row in mealitem_list %}
             {% if row.meal_type == meal.0 %}
                 {% if row.status == 0 %}
-                    <h3><del>{{row.meal}}</del></h3>
+                    <a href="{% url 'menu_item' row.pk %}"><h3><del>{{row.meal}}</del></h3></a>
                 {% else %}
-                    <h3>{{row.meal}}</h3>
+                    <a href="{% url 'menu_item' row.pk %}"><h3>{{row.meal}}</h3></a>
                 {% endif %}
                 <p>{{row.description}}</p>
                 <p>{{row.price}}</p>
