--- a/RestaurantManagementApp/restaurant_management/templates/menu_item_details.html
+++ b/RestaurantManagementApp/restaurant_management/templates/menu_item_details.html
@@ -5,6 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-  <h1>Menu Item Details</h1>
+    <h1>{{ mealitem.meal }}</h1>
+    <p>{{ mealitem.description }}</p>
+    <h3>{{ mealitem.price }}</h3>
 </body>
 </html>
